--- a/main.html
+++ b/main.html
@@ -111,52 +111,68 @@
       </ul>
     </div>
   </nav>
-
-  <!-- HERO -->
-  <section class="py-20 bg-hero relative overflow-hidden">
-    <div class="section-overlay"></div>
-    <div class="section-content max-w-7xl mx-auto flex flex-col items-center text-center px-6 fade-in-on-scroll">
-      <h1 class="text-5xl font-extrabold mb-4 animated-title">I'm Subhajit Debbarma
-      
-      </h1>
-      <p class="text-lg text-gray-300 mb-6"> </p>
-      <div class="flex gap-4">
-        <a href="mailto:subhajitworkmail01@gmail.com"
+<!-- HERO SECTION WITH CIRCULAR PHOTO -->
+<section class="py-20 bg-hero relative overflow-hidden">
+  <div class="section-overlay"></div>
+  <div class="section-content max-w-7xl mx-auto flex flex-col md:flex-row items-center text-center md:text-left px-6 fade-in-on-scroll gap-8">
+    <!-- Bigger circular image -->
+    <div class="flex-shrink-0 mb-6 md:mb-0">
+      <img 
+        src="Subhajit_img1.jpg" 
+        alt="Profile Image" 
+        class="w-48 h-48 rounded-full border-4 border-[var(--primary-color)] shadow-lg object-cover"
+      >
+    </div>
+    <!-- Title and Actions -->
+    <div>
+      <h1 class="text-5xl font-extrabold mb-4 animated-title">I'm Subhajit Debbarma</h1>
+      <p class="text-lg text-gray-300 mb-6"></p>
+      <div class="flex gap-4 justify-center md:justify-start">
+        <a 
+          href="mailto:subhajitworkmail01@gmail.com"
           class="btn-primary px-6 py-3 rounded-full font-semibold text-white"
-          style="background:var(--primary-color);">Contact Me</a>
-        <a href="https://github.com/subhajit5566" target="_blank"
+          style="background:var(--primary-color);"
+        >Contact Me</a>
+        <a 
+          href="https://github.com/subhajit5656"
+          target="_blank"
           class="btn-outline px-6 py-3 rounded-full font-semibold"
-          style="border:2px solid var(--primary-color);">GitHub</a>
+          style="border:2px solid var(--primary-color);"
+        >GitHub</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+  
+
+ 
+
 
   <!-- DIVIDER -->
   <div class="divider"><svg viewBox="0 0 500 50">
       <path d="M0,0 C150,60 350,-20 500,30 L500,00 L0,0 Z" fill="#18181b"></path>
     </svg></div>
 
-  <!-- ABOUT -->
-   <!-- ABOUT -->
   <section id="about" class="py-20 bg-[var(--bg-secondary)] relative overflow-hidden">
-    <div class="section-content max-w-5xl mx-auto px-6 fade-in-on-scroll text-center">
-      <h2 class="text-4xl font-extrabold mb-6">About <span class="text-[var(--accent-color)]">Me</span></h2>
-      <p class="text-gray-300 text-lg leading-relaxed">
-        I’m <span class="text-[var(--primary-color)] font-semibold">Subhajit Debbarma</span>, a passionate learner and aspiring software developer from Agartala, Tripura.  
-        Currently pursuing my <strong>Bachelor’s in Computer Applications</strong> at Lovely Professional University, I have developed strong foundations in 
-        <strong>programming (C, C++, DSA)</strong>, <strong>web development (HTML, CSS, JavaScript)</strong>, and <strong>databases (MySQL, DBMS, Networking)</strong>.  
-      </p>
-      <p class="text-gray-300 text-lg leading-relaxed mt-6">
-        My interests lie in <span class="text-[var(--primary-color)]">Artificial Intelligence, Machine Learning, and Data Analytics</span>, where I enjoy building projects 
-        that solve real-world problems. I have hands-on experience through internships, simulations, and hackathons, and I constantly seek opportunities to 
-        <strong>apply knowledge, collaborate in teams, and learn new technologies</strong>.
-      </p>
-      <p class="text-gray-300 text-lg leading-relaxed mt-6">
-        Beyond academics, I enjoy <span class="text-[var(--accent-color)]">participating in hackathons</span> and contributing to open-source projects.  
-        My long-term goal is to become a skilled <strong>AI/ML Engineer</strong> and contribute to innovative solutions that can make a real difference in society.
-      </p>
+  <div class="section-content max-w-5xl mx-auto px-6 fade-in-on-scroll text-center md:text-left flex flex-col md:flex-row items-center gap-8">
+    <!-- Text Content -->
+    <div class="md:w-2/3 text-gray-300 text-lg leading-relaxed">
+      <p>I'm <span class="text-[var(--primary-color)] font-semibold">Subhajit Debbarma</span>, a passionate learner and aspiring software developer from Agartala, Tripura...</p>
+      <p class="mt-6">My interests lie in <span class="text-[var(--primary-color)]">Artificial Intelligence, Machine Learning, and Data Analytics</span>, where I enjoy building projects...</p>
+      <p class="mt-6">Beyond academics, I enjoy <span class="text-[var(--accent-color)]">participating in hackathons</span> and contributing to open-source projects...</p>
     </div>
-  </section>
+    <!-- Right-aligned rectangular image -->
+    <div class="md:w-1/3 flex justify-center md:justify-end">
+      <img 
+        src="img2..jpg" 
+        alt="About Me Image" 
+        class="rounded-lg shadow-md object-cover w-full max-w-sm"
+      >
+    </div>
+  </div>
+</section>
+
 
 
   <!-- EDUCATION -->
@@ -216,7 +232,7 @@
   <!-- SKILLS -->
   <section id="skills" class="py-20 bg-[var(--bg-main)] relative overflow-hidden">
     <div class="section-content max-w-5xl mx-auto px-6 fade-in-on-scroll text-center">
-      <h2 class="text-4xl font-extrabold mb-12">Skills</h2>
+      <h2 class="text-4xl font-extrabold mb-12">Technical Skills</h2>
       <div class="flex flex-wrap justify-center gap-3">
         <span class="bg-[var(--primary-color)] px-4 py-2 rounded-full">C</span>
         <span class="bg-[var(--primary-color)] px-4 py-2 rounded-full">C++</span>
@@ -230,6 +246,20 @@
       </div>
     </div>
   </section>
+    <!-- SOFT SKILLS -->
+  <section id="soft-skills" class="py-20 bg-[var(--bg-secondary)] relative overflow-hidden">
+    <div class="section-content max-w-5xl mx-auto px-6 fade-in-on-scroll text-center">
+      <h2 class="text-4xl font-extrabold mb-12">Soft Skills</h2>
+      <div class="flex flex-wrap justify-center gap-3">
+        <span class="bg-[var(--accent-color)] px-4 py-2 rounded-full">Problem-Solving</span>
+        <span class="bg-[var(--accent-color)] px-4 py-2 rounded-full">Teamwork</span>
+        <span class="bg-[var(--accent-color)] px-4 py-2 rounded-full">Adaptability</span>
+        <span class="bg-[var(--accent-color)] px-4 py-2 rounded-full">Time Management</span>
+        <span class="bg-[var(--accent-color)] px-4 py-2 rounded-full">Creativity</span>
+      </div>
+    </div>
+  </section>
+
 
   <!-- PROJECTS -->
   <section id="projects" class="py-20 bg-[var(--bg-secondary)] relative overflow-hidden">
